# claude-code-gateway

./: .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
static/: app.js  style.css
templates/: index.html
