[project]
name = "claude-code-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "typer>=0.12.0",
    "jinja2>=3.1.4",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=6.30.1",
    "ruff>=0.12.11",
]

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
output-format = "grouped"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
